# sc_cryptolib_common

./: .gitignore  .travis.yml  Cargo.toml  build_jar.sh
api/: Cargo.toml
api/src/: exception.rs  ginger_calls.rs  lib.rs
api/src/ginger_calls/: field_element.rs  merkle_tree.rs  mod.rs  poseidon_hash.rs  schnorr_signature.rs  serialization.rs  vrf.rs
api/src/rust_jni/: exception.rs  field_element.rs  merkle_tree.rs  mod.rs  poseidon_hash.rs  schnorr_signature.rs  utils.rs  vrf.rs
api/src/rust_jni/merkle_tree/: append_only.rs  mod.rs  path.rs  sparse.rs
api/src/type_mappings/: bn_382.rs  macros.rs  mod.rs  tweedle.rs
ci/: run_tests.sh  script.sh  travis_keep_alive.sh
ci/docker/: entrypoint.sh
ci/tests/: 001_cargo_test_tweedle.sh  002_cargo_test_bn_382.sh  003_cargo_build_tweedle.sh  004_cargo_build_bn_382.sh  005_cargo_audit.sh
jni/: .gitignore  .project  pom.xml
jni/src/main/java/com/horizen/common/librustsidechains/: ConversionException.java  DeserializationException.java  FieldElement.java  FieldElementConversionException.java  FieldElementConvertible.java  FieldElementException.java  FinalizationException.java  InitializationException.java  Library.java
jni/src/main/java/com/horizen/common/merkletreenative/: BaseMerkleTree.java  FieldBasedMerklePath.java  MerklePathException.java  MerkleTree.java  MerkleTreeException.java  MerkleTreeLeaf.java  MerkleTreeLeafException.java
jni/src/main/java/com/horizen/common/poseidonnative/: PoseidonHash.java  PoseidonHashException.java
jni/src/main/java/com/horizen/common/schnorrnative/: SchnorrKeyPair.java  SchnorrPublicKey.java  SchnorrSecretKey.java  SchnorrSignature.java  SchnorrSignatureException.java
jni/src/main/java/com/horizen/common/vrfnative/: VRFException.java  VRFKeyPair.java  VRFProof.java  VRFProveResult.java  VRFPublicKey.java  VRFSecretKey.java
jni/src/main/java/com/horizen/librustsidechains/: FieldElement.java  FieldElementException.java  Library.java
jni/src/main/java/com/horizen/merkletreenative/: BaseMerkleTree.java  ByteMerkleTree.java  FieldBasedMerklePath.java  FieldBasedMerkleTree.java  FieldElementLeaf.java  InMemoryOptimizedMerkleTree.java  MerklePathException.java  MerkleTree.java  MerkleTreeException.java  MerkleTreeLeaf.java  MerkleTreeLeafException.java
jni/src/main/java/com/horizen/poseidonnative/: PoseidonHash.java  PoseidonHashException.java
jni/src/main/java/com/horizen/schnorrnative/: SchnorrKeyPair.java  SchnorrPublicKey.java  SchnorrSecretKey.java  SchnorrSignature.java  SchnorrSignatureException.java
jni/src/main/java/io/horizen/common/librustsidechains/: Constants.java  DeserializationException.java  FieldElement.java  FieldElementConversionException.java  FieldElementConvertible.java  FinalizationException.java  InitializationException.java  Library.java  NativeOperationException.java  NativeParsingException.java
jni/src/main/java/io/horizen/common/merkletreenative/: AppendOnlyMerkleTree.java  BaseAppendOnlyMerkleTree.java  BaseMerkleTree.java  BaseSparseMerkleTree.java  FieldBasedMerklePath.java  MerklePathException.java  MerkleTree.java  MerkleTreeCommon.java  MerkleTreeException.java  SparseMerkleTree.java
jni/src/main/java/io/horizen/common/poseidonnative/: PoseidonHash.java  PoseidonHashable.java
jni/src/main/java/io/horizen/common/schnorrnative/: SchnorrKeyPair.java  (+4 more)
jni/src/test/java/com/horizen/common/: TestUtils.java
jni/src/test/java/com/horizen/librustsidechains/: FieldElementTest.java  LibraryTest.java
jni/src/test/java/com/horizen/merkletreenative/: MerkleTreeTest.java
jni/src/test/java/com/horizen/poseidonnative/: PoseidonHashTest.java
jni/src/test/java/com/horizen/schnorrnative/: SchnorrKeyPairTest.java  SchnorrSecretKeyTest.java
jni/src/test/java/io/horizen/common/: TestUtils.java
lib-sc-common/: Cargo.toml
lib-sc-common/src/: lib.rs
(+22 files in other folders)
