[workspace]

members = [
    "api"
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

# Uncomment these lines for local development paths
#
#[patch.'https://github.com/HorizenOfficial/ginger-lib.git']
#algebra = { path = '../ginger-lib/algebra' }
#primitives = { path = '../ginger-lib/primitives' }
#r1cs-core = { path = '../ginger-lib/r1cs/core' }
#r1cs-crypto = { path = '../ginger-lib/r1cs/gadgets/crypto' }
#r1cs-std = { path = '../ginger-lib/r1cs/gadgets/std' }