[workspace]

members = [
    "api",
    "lib-sc-common"
]

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

[profile.dev]
opt-level = 0
panic = "unwind"

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
panic = "unwind"

# Uncomment these lines for local development paths
#
[patch.'https://github.com/HorizenOfficial/ginger-lib.git']
# algebra = { path = '../ginger-lib/algebra' }
# primitives = { path = '../ginger-lib/primitives' }
# proof-systems = { path = '../ginger-lib/proof-systems' }
# r1cs-core = { path = '../ginger-lib/r1cs/core' }
#
type-mappings = { path = '../ginger-lib/type-mappings' }