[package]
name = "common-api"
version = "0.1.0"
authors = ["DanieleDiBenedetto <daniele@horizenlabs.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = {version = "0.1.0", git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "rc/audit_chain"}
primitives = {version = "0.1.0", features = ["signature", "merkle_tree"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "rc/audit_chain"}

jni = "0.19.0"
derivative = "2.2.0"
lazy_static = "1"
radix_trie = "0.2.1"
rand = { version = "0.8.4" }
rand_xorshift = { version = "0.3.0" }
blake2 = { version = "0.8.1", default-features = false }

[features]
asm = [ "algebra/llvm_asm"]
tweedle = ["algebra/tweedle", "primitives/tweedle"]
bn_382 = ["algebra/bn_382", "primitives/bn_382"]

[lib]
name = "sc_common_cryptolib"
path = "src/lib.rs"
crate_type = ["cdylib"]