[package]
name = "common-api"
version = "0.1.0"
authors = [
    "DanieleDiBenedetto <daniele@horizenlabs.io>",
    "Maksym Vereshchak <phoinic@gmail.com>",
    "Oleksandr Iozhytsia <oleksandr@zensystem.io>",
    "Luigi Varriale <luigi@horizenlabs.io>",
    "cronicc <cronic@horizenlabs.io>",
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development" }
primitives = { features = ["signature", "merkle_tree", "vrf"], git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development" }
type-mappings = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "feat/concrete_instantiations"}

proof-systems = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development", optional = true }
r1cs-core = { git = "https://github.com/HorizenOfficial/ginger-lib.git", branch = "development", optional = true }

jni = "0.19.0"
derivative = "2.2.0"
lazy_static = "1"
radix_trie = "0.2.1"
rand = { version = "0.8.4" }
rand_xorshift = { version = "0.3.0" }
blake2 = { version = "0.8.1", default-features = false }
blake2s_simd = "0.5"
bit-vec = "0.6.1"

[features]
asm = [ "algebra/llvm_asm"]
tweedle = ["algebra/tweedle", "primitives/tweedle"]
bn_382 = ["algebra/bn_382", "primitives/bn_382"]
groth16 = ["proof-systems/groth16", "type-mappings/groth16", "r1cs-core"]